Compiler/Lang2Parser.cs
// $ANTLR 3.3 Nov 30, 2010 12:50:56 Lang2.g 2017-01-03 20:55:00

// The variable 'variable' is assigned but its value is never used.
#pragma warning disable 219
// Unreachable code detected.
#pragma warning disable 162


	using System;


using System.Collections.Generic;
using Antlr.Runtime;
using Stack = System.Collections.Generic.Stack<object>;
using List = System.Collections.IList;
using ArrayList = System.Collections.Generic.List<object>;


using Antlr.Runtime.Tree;
using RewriteRuleITokenStream = Antlr.Runtime.Tree.RewriteRuleTokenStream;

namespace Lang2
{
[System.CodeDom.Compiler.GeneratedCode("ANTLR", "3.3 Nov 30, 2010 12:50:56")]
[System.CLSCompliant(false)]
public partial class Lang2Parser : Antlr.Runtime.Parser
{
	internal static readonly string[] tokenNames = new string[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "PROGRAM", "VAR_DECL", "METH_CALL", "CALL_ARGS", "ARR_DECL", "ARR_CALL", "IF", "BODY", "FOR", "WHILE", "DO", "INC", "DEC", "METH_DECL", "DECL_ARGS", "RET_TYPE_SINGLE", "RET_TYPE_ARR", "RETURN", "TINT", "TFLOAT", "TSTRING", "TCHAR", "TBOOL", "TVOID", "ELSE", "OP_END", "INT", "DOUBLE", "CHAR", "STRING", "WS", "ADD", "SUB", "MULT", "DIV", "ASS", "DISJ", "CONJ", "IS_MORE", "IS_LESS", "IS_EQUALLY", "INVERT", "IS_LESS_OR_EQUAL", "IS_MORE_OR_EQUAL", "ID", "'['", "']'", "'{'", "'}'", "'('", "')'", "','"
	};
	public const int EOF=-1;
	public const int T__49=49;
	public const int T__50=50;
	public const int T__51=51;
	public const int T__52=52;
	public const int T__53=53;
	public const int T__54=54;
	public const int T__55=55;
	public const int PROGRAM=4;
	public const int VAR_DECL=5;
	public const int METH_CALL=6;
	public const int CALL_ARGS=7;
	public const int ARR_DECL=8;
	public const int ARR_CALL=9;
	public const int IF=10;
	public const int BODY=11;
	public const int FOR=12;
	public const int WHILE=13;
	public const int DO=14;
	public const int INC=15;
	public const int DEC=16;
	public const int METH_DECL=17;
	public const int DECL_ARGS=18;
	public const int RET_TYPE_SINGLE=19;
	public const int RET_TYPE_ARR=20;
	public const int RETURN=21;
	public const int TINT=22;
	public const int TFLOAT=23;
	public const int TSTRING=24;
	public const int TCHAR=25;
	public const int TBOOL=26;
	public const int TVOID=27;
	public const int ELSE=28;
	public const int OP_END=29;
	public const int INT=30;
	public const int DOUBLE=31;
	public const int CHAR=32;
	public const int STRING=33;
	public const int WS=34;
	public const int ADD=35;
	public const int SUB=36;
	public const int MULT=37;
	public const int DIV=38;
	public const int ASS=39;
	public const int DISJ=40;
	public const int CONJ=41;
	public const int IS_MORE=42;
	public const int IS_LESS=43;
	public const int IS_EQUALLY=44;
	public const int INVERT=45;
	public const int IS_LESS_OR_EQUAL=46;
	public const int IS_MORE_OR_EQUAL=47;
	public const int ID=48;

	// delegates
	// delegators

	#if ANTLR_DEBUG
		private static readonly bool[] decisionCanBacktrack =
			new bool[]
			{
				false, // invalid decision
				false, false, false, false, false, false, false, false, false, false, 
				false, false, false, false, false, false, false, false, false, false, 
				false, false, false, false
			};
	#else
		private static readonly bool[] decisionCanBacktrack = new bool[0];
	#endif
	public Lang2Parser( ITokenStream input )
		: this( input, new RecognizerSharedState() )
	{
	}
	public Lang2Parser(ITokenStream input, RecognizerSharedState state)
		: base(input, state)
	{
		ITreeAdaptor treeAdaptor = null;
		CreateTreeAdaptor(ref treeAdaptor);
		TreeAdaptor = treeAdaptor ?? new CommonTreeAdaptor();

		OnCreated();
	}
		
	// Implement this function in your helper file to use a custom tree adaptor
	partial void CreateTreeAdaptor(ref ITreeAdaptor adaptor);

	private ITreeAdaptor adaptor;

	public ITreeAdaptor TreeAdaptor
	{
		get
		{
			return adaptor;
		}
		set
		{
			this.adaptor = value;
		}
	}

	public override string[] TokenNames { get { return Lang2Parser.tokenNames; } }
	public override string GrammarFileName { get { return "Lang2.g"; } }


	partial void OnCreated();
	partial void EnterRule(string ruleName, int ruleIndex);
	partial void LeaveRule(string ruleName, int ruleIndex);

	#region Rules
	public class type_return : ParserRuleReturnScope<IToken>, IAstRuleReturnScope<object>
	{
		private object _tree;
		public object Tree { get { return _tree; } set { _tree = value; } }
	}

	partial void Enter_type();
	partial void Leave_type();

	// $ANTLR start "type"
	// Lang2.g:104:1: type : ( TINT | TFLOAT | TSTRING | TCHAR | TBOOL | TVOID );
	[GrammarRule("type")]
	private Lang2Parser.type_return type()
	{
		Enter_type();
		EnterRule("type", 1);
		TraceIn("type", 1);
		Lang2Parser.type_return retval = new Lang2Parser.type_return();
		retval.Start = (IToken)input.LT(1);

		object root_0 = null;

		IToken set1=null;

		object set1_tree=null;

		try { DebugEnterRule(GrammarFileName, "type");
		DebugLocation(104, 1);
		try
		{
			// Lang2.g:104:6: ( TINT | TFLOAT | TSTRING | TCHAR | TBOOL | TVOID )
			DebugEnterAlt(1);
			// Lang2.g:
			{
			root_0 = (object)adaptor.Nil();

			DebugLocation(104, 6);
			set1=(IToken)input.LT(1);
			if ((input.LA(1)>=TINT && input.LA(1)<=TVOID))
			{
				input.Consume();
				adaptor.AddChild(root_0, (object)adaptor.Create(set1));
				state.errorRecovery=false;
			}
			else
			{
				MismatchedSetException mse = new MismatchedSetException(null,input);
				DebugRecognitionException(mse);
				throw mse;
			}


			}

			retval.Stop = (IToken)input.LT(-1);

			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("type", 1);
			LeaveRule("type", 1);
			Leave_type();
		}
		DebugLocation(110, 1);
		} finally { DebugExitRule(GrammarFileName, "type"); }
		return retval;

	}
	// $ANTLR end "type"

	public class arrDecl_return : ParserRuleReturnScope<IToken>, IAstRuleReturnScope<object>
	{
		private object _tree;
		public object Tree { get { return _tree; } set { _tree = value; } }
	}

	partial void Enter_arrDecl();
	partial void Leave_arrDecl();

	// $ANTLR start "arrDecl"
	// Lang2.g:114:1: arrDecl : type ID '[' mathExpr ']' OP_END -> ^( ARR_DECL type ID mathExpr ) ;
	[GrammarRule("arrDecl")]
	private Lang2Parser.arrDecl_return arrDecl()
	{
		Enter_arrDecl();
		EnterRule("arrDecl", 2);
		TraceIn("arrDecl", 2);
		Lang2Parser.arrDecl_return retval = new Lang2Parser.arrDecl_return();
		retval.Start = (IToken)input.LT(1);

		object root_0 = null;

		IToken ID3=null;
		IToken char_literal4=null;
		IToken char_literal6=null;
		IToken OP_END7=null;
		Lang2Parser.type_return type2 = default(Lang2Parser.type_return);
		Lang2Parser.mathExpr_return mathExpr5 = default(Lang2Parser.mathExpr_return);

		object ID3_tree=null;
		object char_literal4_tree=null;
		object char_literal6_tree=null;
		object OP_END7_tree=null;
		RewriteRuleITokenStream stream_49=new RewriteRuleITokenStream(adaptor,"token 49");
		RewriteRuleITokenStream stream_OP_END=new RewriteRuleITokenStream(adaptor,"token OP_END");
		RewriteRuleITokenStream stream_ID=new RewriteRuleITokenStream(adaptor,"token ID");
		RewriteRuleITokenStream stream_50=new RewriteRuleITokenStream(adaptor,"token 50");
		RewriteRuleSubtreeStream stream_mathExpr=new RewriteRuleSubtreeStream(adaptor,"rule mathExpr");
		RewriteRuleSubtreeStream stream_type=new RewriteRuleSubtreeStream(adaptor,"rule type");
		try { DebugEnterRule(GrammarFileName, "arrDecl");
		DebugLocation(114, 3);
		try
		{
			// Lang2.g:114:10: ( type ID '[' mathExpr ']' OP_END -> ^( ARR_DECL type ID mathExpr ) )
			DebugEnterAlt(1);
			// Lang2.g:114:12: type ID '[' mathExpr ']' OP_END
			{
			DebugLocation(114, 12);
			PushFollow(Follow._type_in_arrDecl539);
			type2=type();
			PopFollow();

			stream_type.Add(type2.Tree);
			DebugLocation(114, 17);
			ID3=(IToken)Match(input,ID,Follow._ID_in_arrDecl541);  
			stream_ID.Add(ID3);

			DebugLocation(114, 19);
			char_literal4=(IToken)Match(input,49,Follow._49_in_arrDecl542);  
			stream_49.Add(char_literal4);

			DebugLocation(114, 22);
			PushFollow(Follow._mathExpr_in_arrDecl543);
			mathExpr5=mathExpr();
			PopFollow();

			stream_mathExpr.Add(mathExpr5.Tree);
			DebugLocation(114, 30);
			char_literal6=(IToken)Match(input,50,Follow._50_in_arrDecl544);  
			stream_50.Add(char_literal6);

			DebugLocation(114, 34);
			OP_END7=(IToken)Match(input,OP_END,Follow._OP_END_in_arrDecl546);  
			stream_OP_END.Add(OP_END7);



			{
			// AST REWRITE
			// elements: type, mathExpr, ID
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.Tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.Tree:null);

			root_0 = (object)adaptor.Nil();
			// 114:41: -> ^( ARR_DECL type ID mathExpr )
			{
				DebugLocation(114, 44);
				// Lang2.g:114:44: ^( ARR_DECL type ID mathExpr )
				{
				object root_1 = (object)adaptor.Nil();
				DebugLocation(114, 46);
				root_1 = (object)adaptor.BecomeRoot((object)adaptor.Create(ARR_DECL, "ARR_DECL"), root_1);

				DebugLocation(114, 55);
				adaptor.AddChild(root_1, stream_type.NextTree());
				DebugLocation(114, 60);
				adaptor.AddChild(root_1, stream_ID.NextNode());
				DebugLocation(114, 63);
				adaptor.AddChild(root_1, stream_mathExpr.NextTree());

				adaptor.AddChild(root_0, root_1);
				}

			}

			retval.Tree = root_0;
			}

			}

			retval.Stop = (IToken)input.LT(-1);

			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("arrDecl", 2);
			LeaveRule("arrDecl", 2);
			Leave_arrDecl();
		}
		DebugLocation(115, 3);
		} finally { DebugExitRule(GrammarFileName, "arrDecl"); }
		return retval;

	}
	// $ANTLR end "arrDecl"

	public class arrCall_return : ParserRuleReturnScope<IToken>, IAstRuleReturnScope<object>
	{
		private object _tree;
		public object Tree { get { return _tree; } set { _tree = value; } }
	}

	partial void Enter_arrCall();
	partial void Leave_arrCall();

	// $ANTLR start "arrCall"
	// Lang2.g:117:1: arrCall : ID '[' mathExpr ']' -> ^( ARR_CALL ID mathExpr ) ;
	[GrammarRule("arrCall")]
	private Lang2Parser.arrCall_return arrCall()
	{
		Enter_arrCall();
		EnterRule("arrCall", 3);
		TraceIn("arrCall", 3);
		Lang2Parser.arrCall_return retval = new Lang2Parser.arrCall_return();
		retval.Start = (IToken)input.LT(1);

		object root_0 = null;

		IToken ID8=null;
		IToken char_literal9=null;
		IToken char_literal11=null;
		Lang2Parser.mathExpr_return mathExpr10 = default(Lang2Parser.mathExpr_return);

		object ID8_tree=null;
		object char_literal9_tree=null;
		object char_literal11_tree=null;
		RewriteRuleITokenStream stream_49=new RewriteRuleITokenStream(adaptor,"token 49");
		RewriteRuleITokenStream stream_ID=new RewriteRuleITokenStream(adaptor,"token ID");
		RewriteRuleITokenStream stream_50=new RewriteRuleITokenStream(adaptor,"token 50");
		RewriteRuleSubtreeStream stream_mathExpr=new RewriteRuleSubtreeStream(adaptor,"rule mathExpr");
		try { DebugEnterRule(GrammarFileName, "arrCall");
		DebugLocation(117, 3);
		try
		{
			// Lang2.g:117:10: ( ID '[' mathExpr ']' -> ^( ARR_CALL ID mathExpr ) )
			DebugEnterAlt(1);
			// Lang2.g:117:12: ID '[' mathExpr ']'
			{
			DebugLocation(117, 12);
			ID8=(IToken)Match(input,ID,Follow._ID_in_arrCall571);  
			stream_ID.Add(ID8);

			DebugLocation(117, 14);
			char_literal9=(IToken)Match(input,49,Follow._49_in_arrCall572);  
			stream_49.Add(char_literal9);

			DebugLocation(117, 17);
			PushFollow(Follow._mathExpr_in_arrCall573);
			mathExpr10=mathExpr();
			PopFollow();

			stream_mathExpr.Add(mathExpr10.Tree);
			DebugLocation(117, 25);
			char_literal11=(IToken)Match(input,50,Follow._50_in_arrCall574);  
			stream_50.Add(char_literal11);



			{
			// AST REWRITE
			// elements: mathExpr, ID
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.Tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.Tree:null);

			root_0 = (object)adaptor.Nil();
			// 117:29: -> ^( ARR_CALL ID mathExpr )
			{
				DebugLocation(117, 32);
				// Lang2.g:117:32: ^( ARR_CALL ID mathExpr )
				{
				object root_1 = (object)adaptor.Nil();
				DebugLocation(117, 34);
				root_1 = (object)adaptor.BecomeRoot((object)adaptor.Create(ARR_CALL, "ARR_CALL"), root_1);

				DebugLocation(117, 43);
				adaptor.AddChild(root_1, stream_ID.NextNode());
				DebugLocation(117, 46);
				adaptor.AddChild(root_1, stream_mathExpr.NextTree());

				adaptor.AddChild(root_0, root_1);
				}

			}

			retval.Tree = root_0;
			}

			}

			retval.Stop = (IToken)input.LT(-1);

			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("arrCall", 3);
			LeaveRule("arrCall", 3);
			Leave_arrCall();
		}
		DebugLocation(118, 3);
		} finally { DebugExitRule(GrammarFileName, "arrCall"); }
		return retval;

	}
	// $ANTLR end "arrCall"

	public class bodyFExpr_return : ParserRuleReturnScope<IToken>, IAstRuleReturnScope<object>
	{
		private object _tree;
		public object Tree { get { return _tree; } set { _tree = value; } }
	}

	partial void Enter_bodyFExpr();
	partial void Leave_bodyFExpr();

	// $ANTLR start "bodyFExpr"
	// Lang2.g:121:1: bodyFExpr : ( varDecl | ID ASS mathExpr OP_END | methCall OP_END | arrDecl | ifExpr | forLoop | incSug OP_END | decSug OP_END | whileLoop | doLoop | arrCall ASS mathExpr OP_END | RETURN ( mathExpr )? OP_END );
	[GrammarRule("bodyFExpr")]
	private Lang2Parser.bodyFExpr_return bodyFExpr()
	{
		Enter_bodyFExpr();
		EnterRule("bodyFExpr", 4);
		TraceIn("bodyFExpr", 4);
		Lang2Parser.bodyFExpr_return retval = new Lang2Parser.bodyFExpr_return();
		retval.Start = (IToken)input.LT(1);

		object root_0 = null;

		IToken ID13=null;
		IToken ASS14=null;
		IToken OP_END16=null;
		IToken OP_END18=null;
		IToken OP_END23=null;
		IToken OP_END25=null;
		IToken ASS29=null;
		IToken OP_END31=null;
		IToken RETURN32=null;
		IToken OP_END34=null;
		Lang2Parser.varDecl_return varDecl12 = default(Lang2Parser.varDecl_return);
		Lang2Parser.mathExpr_return mathExpr15 = default(Lang2Parser.mathExpr_return);
		Lang2Parser.methCall_return methCall17 = default(Lang2Parser.methCall_return);
		Lang2Parser.arrDecl_return arrDecl19 = default(Lang2Parser.arrDecl_return);
		Lang2Parser.ifExpr_return ifExpr20 = default(Lang2Parser.ifExpr_return);
		Lang2Parser.forLoop_return forLoop21 = default(Lang2Parser.forLoop_return);
		Lang2Parser.incSug_return incSug22 = default(Lang2Parser.incSug_return);
		Lang2Parser.decSug_return decSug24 = default(Lang2Parser.decSug_return);
		Lang2Parser.whileLoop_return whileLoop26 = default(Lang2Parser.whileLoop_return);
		Lang2Parser.doLoop_return doLoop27 = default(Lang2Parser.doLoop_return);
		Lang2Parser.arrCall_return arrCall28 = default(Lang2Parser.arrCall_return);
		Lang2Parser.mathExpr_return mathExpr30 = default(Lang2Parser.mathExpr_return);
		Lang2Parser.mathExpr_return mathExpr33 = default(Lang2Parser.mathExpr_return);

		object ID13_tree=null;
		object ASS14_tree=null;
		object OP_END16_tree=null;
		object OP_END18_tree=null;
		object OP_END23_tree=null;
		object OP_END25_tree=null;
		object ASS29_tree=null;
		object OP_END31_tree=null;
		object RETURN32_tree=null;
		object OP_END34_tree=null;

		try { DebugEnterRule(GrammarFileName, "bodyFExpr");
		DebugLocation(121, 4);
		try
		{
			// Lang2.g:121:11: ( varDecl | ID ASS mathExpr OP_END | methCall OP_END | arrDecl | ifExpr | forLoop | incSug OP_END | decSug OP_END | whileLoop | doLoop | arrCall ASS mathExpr OP_END | RETURN ( mathExpr )? OP_END )
			int alt2=12;
			try { DebugEnterDecision(2, decisionCanBacktrack[2]);
			try
			{
				alt2 = dfa2.Predict(input);
			}
			catch (NoViableAltException nvae)
			{
				DebugRecognitionException(nvae);
				throw;
			}
			} finally { DebugExitDecision(2); }
			switch (alt2)
			{
			case 1:
				DebugEnterAlt(1);
				// Lang2.g:121:13: varDecl
				{
				root_0 = (object)adaptor.Nil();

				DebugLocation(121, 13);
				PushFollow(Follow._varDecl_in_bodyFExpr597);
				varDecl12=varDecl();
				PopFollow();

				adaptor.AddChild(root_0, varDecl12.Tree);

				}
				break;
			case 2:
				DebugEnterAlt(2);
				// Lang2.g:122:6: ID ASS mathExpr OP_END
				{
				root_0 = (object)adaptor.Nil();

				DebugLocation(122, 6);
				ID13=(IToken)Match(input,ID,Follow._ID_in_bodyFExpr604); 
				ID13_tree = (object)adaptor.Create(ID13);
				adaptor.AddChild(root_0, ID13_tree);

				DebugLocation(122, 12);
				ASS14=(IToken)Match(input,ASS,Follow._ASS_in_bodyFExpr606); 
				ASS14_tree = (object)adaptor.Create(ASS14);
				root_0 = (object)adaptor.BecomeRoot(ASS14_tree, root_0);

				DebugLocation(122, 14);
				PushFollow(Follow._mathExpr_in_bodyFExpr609);
				mathExpr15=mathExpr();
				PopFollow();

				adaptor.AddChild(root_0, mathExpr15.Tree);
				DebugLocation(122, 29);
				OP_END16=(IToken)Match(input,OP_END,Follow._OP_END_in_bodyFExpr611); 

				}
				break;
			case 3:
				DebugEnterAlt(3);
				// Lang2.g:123:6: methCall OP_END
				{
				root_0 = (object)adaptor.Nil();

				DebugLocation(123, 6);
				PushFollow(Follow._methCall_in_bodyFExpr619);
				methCall17=methCall();
				PopFollow();

				adaptor.AddChild(root_0, methCall17.Tree);
				DebugLocation(123, 21);
				OP_END18=(IToken)Match(input,OP_END,Follow._OP_END_in_bodyFExpr621); 

				}
				break;
			case 4:
				DebugEnterAlt(4);
				// Lang2.g:124:6: arrDecl
				{
				root_0 = (object)adaptor.Nil();

				DebugLocation(124, 6);
				PushFollow(Follow._arrDecl_in_bodyFExpr629);
				arrDecl19=arrDecl();
				PopFollow();

				adaptor.AddChild(root_0, arrDecl19.Tree);

				}
				break;
			case 5:
				DebugEnterAlt(5);
				// Lang2.g:125:6: ifExpr
				{
				root_0 = (object)adaptor.Nil();

				DebugLocation(125, 6);
				PushFollow(Follow._ifExpr_in_bodyFExpr636);
				ifExpr20=ifExpr();
				PopFollow();

				adaptor.AddChild(root_0, ifExpr20.Tree);

				}
				break;
			case 6:
				DebugEnterAlt(6);
				// Lang2.g:126:6: forLoop
				{
				root_0 = (object)adaptor.Nil();

				DebugLocation(126, 6);
				PushFollow(Follow._forLoop_in_bodyFExpr643);
				forLoop21=forLoop();
				PopFollow();

				adaptor.AddChild(root_0, forLoop21.Tree);

				}
				break;
			case 7:
				DebugEnterAlt(7);
				// Lang2.g:127:6: incSug OP_END
				{
				root_0 = (object)adaptor.Nil();

				DebugLocation(127, 6);
				PushFollow(Follow._incSug_in_bodyFExpr650);
				incSug22=incSug();
				PopFollow();

				adaptor.AddChild(root_0, incSug22.Tree);
				DebugLocation(127, 19);
				OP_END23=(IToken)Match(input,OP_END,Follow._OP_END_in_bodyFExpr652); 

				}
				break;
			case 8:
				DebugEnterAlt(8);
				// Lang2.g:128:6: decSug OP_END
				{
				root_0 = (object)adaptor.Nil();

				DebugLocation(128, 6);
				PushFollow(Follow._decSug_in_bodyFExpr660);
				decSug24=decSug();
				PopFollow();

				adaptor.AddChild(root_0, decSug24.Tree);
				DebugLocation(128, 19);
				OP_END25=(IToken)Match(input,OP_END,Follow._OP_END_in_bodyFExpr662); 

				}
				break;
			case 9:
				DebugEnterAlt(9);
				// Lang2.g:129:6: whileLoop
				{
				root_0 = (object)adaptor.Nil();

				DebugLocation(129, 6);
				PushFollow(Follow._whileLoop_in_bodyFExpr670);
				whileLoop26=whileLoop();
				PopFollow();

				adaptor.AddChild(root_0, whileLoop26.Tree);

				}
				break;
			case 10:
				DebugEnterAlt(10);
				// Lang2.g:130:6: doLoop
				{
				root_0 = (object)adaptor.Nil();

				DebugLocation(130, 6);
				PushFollow(Follow._doLoop_in_bodyFExpr677);
				doLoop27=doLoop();
				PopFollow();

				adaptor.AddChild(root_0, doLoop27.Tree);

				}
				break;
			case 11:
				DebugEnterAlt(11);
				// Lang2.g:131:6: arrCall ASS mathExpr OP_END
				{
				root_0 = (object)adaptor.Nil();

				DebugLocation(131, 6);
				PushFollow(Follow._arrCall_in_bodyFExpr684);
				arrCall28=arrCall();
				PopFollow();

				adaptor.AddChild(root_0, arrCall28.Tree);
				DebugLocation(131, 17);
				ASS29=(IToken)Match(input,ASS,Follow._ASS_in_bodyFExpr686); 
				ASS29_tree = (object)adaptor.Create(ASS29);
				root_0 = (object)adaptor.BecomeRoot(ASS29_tree, root_0);

				DebugLocation(131, 19);
				PushFollow(Follow._mathExpr_in_bodyFExpr689);
				mathExpr30=mathExpr();
				PopFollow();

				adaptor.AddChild(root_0, mathExpr30.Tree);
				DebugLocation(131, 34);
				OP_END31=(IToken)Match(input,OP_END,Follow._OP_END_in_bodyFExpr691); 

				}
				break;
			case 12:
				DebugEnterAlt(12);
				// Lang2.g:132:6: RETURN ( mathExpr )? OP_END
				{
				root_0 = (object)adaptor.Nil();

				DebugLocation(132, 12);
				RETURN32=(IToken)Match(input,RETURN,Follow._RETURN_in_bodyFExpr699); 
				RETURN32_tree = (object)adaptor.Create(RETURN32);
				root_0 = (object)adaptor.BecomeRoot(RETURN32_tree, root_0);

				DebugLocation(132, 14);
				// Lang2.g:132:14: ( mathExpr )?
				int alt1=2;
				try { DebugEnterSubRule(1);
				try { DebugEnterDecision(1, decisionCanBacktrack[1]);
				int LA1_0 = input.LA(1);

				if (((LA1_0>=INT && LA1_0<=STRING)||LA1_0==INVERT||LA1_0==ID||LA1_0==53))
				{
					alt1=1;
				}
				} finally { DebugExitDecision(1); }
				switch (alt1)
				{
				case 1:
					DebugEnterAlt(1);
					// Lang2.g:132:14: mathExpr
					{
					DebugLocation(132, 14);
					PushFollow(Follow._mathExpr_in_bodyFExpr702);
					mathExpr33=mathExpr();
					PopFollow();

					adaptor.AddChild(root_0, mathExpr33.Tree);

					}
					break;

				}
				} finally { DebugExitSubRule(1); }

				DebugLocation(132, 30);
				OP_END34=(IToken)Match(input,OP_END,Follow._OP_END_in_bodyFExpr705); 

				}
				break;

			}
			retval.Stop = (IToken)input.LT(-1);

			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("bodyFExpr", 4);
			LeaveRule("bodyFExpr", 4);
			Leave_bodyFExpr();
		}
		DebugLocation(133, 4);
		} finally { DebugExitRule(GrammarFileName, "bodyFExpr"); }
		return retval;

	}
	// $ANTLR end "bodyFExpr"

	public class elseExpr_return : ParserRuleReturnScope<IToken>, IAstRuleReturnScope<object>
	{
		private object _tree;
		public object Tree { get { return _tree; } set { _tree = value; } }
	}

	partial void Enter_elseExpr();
	partial void Leave_elseExpr();
